# VRCls

./: license.md  meson.build  readme.md  task
src/: LogFinder.cpp  LogFinder.h  LogScanner.cpp  LogScanner.h  MainForm.cpp  UserList.h  resources.rc
